# smarthome

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
cli/: CMakeLists.txt  cli.cpp
client/: CMakeLists.txt
client/include/: CMakeLists.txt
client/include/smarthome/: CMakeLists.txt  apply_production_client.hpp  client.hpp  client_impl.hpp
client/test/: CMakeLists.txt
client/test/src/: CMakeLists.txt
core/: CMakeLists.txt
core/cli/: CMakeLists.txt
core/include/: CMakeLists.txt
core/include/smarthome/: CMakeLists.txt
core/include/smarthome/core/: CMakeLists.txt
core/src/: CMakeLists.txt
device/: CMakeLists.txt
device/cli/: CMakeLists.txt  cli.cpp
device/include/: CMakeLists.txt
device/include/smarthome/device/: CMakeLists.txt
device/test/: CMakeLists.txt
device/test/src/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  Doxyfile.in
gui/: CMakeLists.txt  README.md  package.json
logger/: CMakeLists.txt
logger/include/: CMakeLists.txt
logger/include/smarthome/: CMakeLists.txt  apply_production_logger.hpp  colored_logger.hpp  logger.hpp
logger/include/smarthome/logger/: CMakeLists.txt  apply_production_logger.hpp  colored_logger.hpp  logger.hpp
logger/src/smarthome/logger/: CMakeLists.txt  colored_logger.cpp  logger.cpp
logger/test/: CMakeLists.txt
logger/test/src/: CMakeLists.txt  main.cpp
mock/: CMakeLists.txt
mock/include/: CMakeLists.txt
mock/include/smarthome/mock/: CMakeLists.txt
mock/src/smarthome/mock/: CMakeLists.txt  all.cpp
sensor/: CMakeLists.txt
service/: CMakeLists.txt
service/include/: CMakeLists.txt
service/include/smarthome/service/: CMakeLists.txt  service.hpp  service_factory.hpp
service/src/smarthome/service/: CMakeLists.txt  service.cpp  service_factory.cpp
service/test/: CMakeLists.txt
service/test/src/: CMakeLists.txt  main.cpp  service_factory.integration.cpp  service_factory.integration.tests.cpp
setup/: CMakeLists.txt  install_dependencies.py  setup_developer_machine.py
smartdevice/: CMakeLists.txt
smartdevice/cli/: CMakeLists.txt
smartdevice/include/: CMakeLists.txt
smartdevice/include/smartdevice/: CMakeLists.txt
smartdevice/test/: CMakeLists.txt
smartdevice/test/src/: CMakeLists.txt
smarthome/: CMakeLists.txt
smarthome/src/smarthome/: CMakeLists.txt
smarthome/test/src/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: CMakeLists.txt  main.cpp
